cncProd/force-app/main/default/objects/Vehicle_Movement_Tracker__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vehicle Movement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Vehicle Movement Trackers</relationshipLabel>
    <relationshipName>Vehicle_Movement_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>