cncProd/force-app/main/default/objects/Vehicle_Movement_Tracker__c/fields/MB_Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>MB_Stock_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MB Stock Vehicle Master</label>
    <referenceTo>MB_Stock_Vehicle_Master__c</referenceTo>
    <relationshipLabel>Vehicle Movement Trackers</relationshipLabel>
    <relationshipName>Vehicle_Movement_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>