cncProd/force-app/main/default/objects/Vehicle_Movement_Tracker__c/fields/Previous_Location__c.field-meta.xml
<CustomField>
    <fullName>Previous_Location__c</fullName>
    <label>Previous Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>