cncProd/force-app/main/default/objects/Vehicle_Movement_Tracker__c/fields/Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Stock_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Vehicle Master</label>
    <referenceTo>Vehicle_Master2__c</referenceTo>
    <relationshipLabel>Vehicle Movement Trackers</relationshipLabel>
    <relationshipName>Vehicle_Movement_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>